--- a/app/src/main/res/layout/fragment_identify.xml
+++ b/app/src/main/res/layout/fragment_identify.xml
@@ -22,7 +22,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize">
 
         <view
             android:id="@+id/waveView"
