--- a/app/src/main/res/layout/fragment_identify.xml
+++ b/app/src/main/res/layout/fragment_identify.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <include layout="@layout/primary_toolbar" />
+        <include layout="@layout/primary_material_toolbar" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
