--- a/app/src/main/res/layout/primary_material_toolbar.xml
+++ b/app/src/main/res/layout/primary_material_toolbar.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/materialToolbar"
+    android:id="@+id/primaryMaterialToolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?attr/actionBarSize"
@@ -9,7 +9,7 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:menu="@menu/identify_toolbar_menu"
+    app:menu="@menu/primary_material_toolbar_menu"
     app:subtitleCentered="true"
     app:title="@string/app_name"
     app:titleCentered="true" />
