--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -80,7 +80,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/app_name"
-                                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />
+                                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" />
 
                             <TextView
                                 android:id="@+id/descriptionTextView"
