feat/refactor: LikedFragment & HistoryViewModel history items StateFlow

--- a/app/src/main/res/navigation/content_nav_graph.xml
+++ b/app/src/main/res/navigation/content_nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_identifyFragment_to_historyFragment"
             app:destination="@id/historyFragment" />
+        <action
+            android:id="@+id/action_identifyFragment_to_likedFragment"
+            app:destination="@id/likedFragment" />
     </fragment>
     <fragment
         android:id="@+id/historyFragment"
@@ -22,5 +25,20 @@
         <action
             android:id="@+id/action_historyFragment_to_identifyFragment"
             app:destination="@id/identifyFragment" />
+        <action
+            android:id="@+id/action_historyFragment_to_likedFragment"
+            app:destination="@id/likedFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/likedFragment"
+        android:name="com.alexmercerind.audire.ui.LikedFragment"
+        android:label="fragment_liked"
+        tools:layout="@layout/fragment_liked" >
+        <action
+            android:id="@+id/action_likedFragment_to_identifyFragment"
+            app:destination="@id/identifyFragment" />
+        <action
+            android:id="@+id/action_likedFragment_to_historyFragment"
+            app:destination="@id/historyFragment" />
     </fragment>
 </navigation>
