--- a/app/src/main/res/layout-v28/history_item.xml
+++ b/app/src/main/res/layout-v28/history_item.xml
@@ -1,4 +1,5 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="8dp"
@@ -11,15 +12,14 @@
     android:outlineSpotShadowColor="@color/transparent">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/coverImageView"
             android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:layout_weight="0" />
+            android:layout_height="96dp" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -45,5 +45,34 @@
                 android:maxLines="1"
                 android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
         </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/likeFrameLayout"
+            android:layout_width="68dp"
+            android:layout_height="match_parent"
+            android:padding="22dp">
+
+            <ImageView
+                android:id="@+id/unlikedImageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:paddingVertical="4dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/baseline_favorite_border_24"
+                app:tint="?attr/colorPrimary" />
+
+            <ImageView
+                android:id="@+id/likedImageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:paddingVertical="4dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/baseline_favorite_24"
+                app:tint="?attr/colorPrimary" />
+        </FrameLayout>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
