--- a/app/src/main/res/menu/bottom_navigation_view_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_view_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/identifyFragment"
@@ -10,4 +9,10 @@
         android:id="@+id/historyFragment"
         android:icon="@drawable/baseline_history_24"
         android:title="@string/bottom_navigation_view_history" />
+    <item
+        android:id="@+id/likedFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:icon="@drawable/baseline_favorite_border_24"
+        android:title="@string/liked" />
 </menu>
