--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -38,6 +38,7 @@
         android:layout_height="?attr/actionBarSize"
         android:paddingHorizontal="8dp"
         android:paddingVertical="8dp"
+        android:visibility="gone"
         app:endIconDrawable="@drawable/baseline_clear_24"
         app:endIconMode="custom"
         app:placeholderText="@string/search">
