--- a/app/src/main/res/menu/identify_material_toolbar_menu.xml
+++ b/app/src/main/res/menu/identify_material_toolbar_menu.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/settings"
         android:icon="@drawable/baseline_settings_24"
         android:title="@string/settings"
+        app:iconTint="?attr/colorOnSurfaceVariant"
         app:showAsAction="never" />
     <item
         android:id="@+id/about"
         android:icon="@drawable/baseline_info_24"
-        android:title="@string/about" />
+        android:title="@string/about"
+        app:iconTint="?attr/colorOnSurfaceVariant"
+        app:showAsAction="never" />
 </menu>
