--- a/app/src/main/res/values-night-v23/themes.xml
+++ b/app/src/main/res/values-night-v23/themes.xml
@@ -4,6 +4,9 @@
         <item name="android:windowActionBar">false</item>
         <item name="android:windowLightStatusBar">false</item>
         <item name="materialAlertDialogTitleTextStyle">@style/TextAppearance.Material3.HeadlineSmall</item>
+        <item name="colorAboutTileBg">?attr/colorPrimaryInverse</item>
+        <item name="colorAboutTileFg0">?attr/colorOnSurface</item>
+        <item name="colorAboutTileFg1">?attr/colorOnSurfaceVariant</item>
     </style>
 
     <style name="Base.Theme.Audire.MaterialAlertDialog" parent="ThemeOverlay.Material3.MaterialAlertDialog.Centered">
