--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -4,6 +4,9 @@
         <item name="android:windowActionBar">false</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="materialAlertDialogTitleTextStyle">@style/TextAppearance.Material3.HeadlineSmall</item>
+        <item name="colorAboutTileBg">?attr/colorPrimary</item>
+        <item name="colorAboutTileFg0">?attr/colorOnPrimary</item>
+        <item name="colorAboutTileFg1">?attr/colorPrimaryContainer</item>
     </style>
 
     <style name="Base.Theme.Audire.MaterialAlertDialog" parent="ThemeOverlay.Material3.MaterialAlertDialog.Centered">
