--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="transparent">#00000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="image_view_gradient_shade">#88000000</color>
+    <attr name="colorAboutTileBg" format="color" />
+    <attr name="colorAboutTileFg0" format="color" />
+    <attr name="colorAboutTileFg1" format="color" />
 </resources>
