--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,9 @@
         <item name="android:navigationBarColor">@color/transparent</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="colorAboutTileBg">?attr/colorPrimary</item>
+        <item name="colorAboutTileFg0">?attr/colorOnPrimary</item>
+        <item name="colorAboutTileFg1">?attr/colorPrimaryContainer</item>
     </style>
 
     <style name="Theme.Audire" parent="Base.Theme.Audire" />
